# ryden-ranker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: eda_and_baseline.ipynb
src/ryden_ranker/: __init__.py  evaluate.py  inference.py  metrics.py  schemas.py  train.py
src/ryden_ranker/adapters/: clickhouse.py
src/ryden_ranker/api/: app.py
src/ryden_ranker/data/: generate.py
src/ryden_ranker/features/: build.py
src/ryden_ranker/models/: baseline.py  ranker.py
tests/: test_api.py  test_data_generation.py  test_features_and_inference.py  test_model_pipeline.py
