[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ryden-ranker"
version = "0.1.0"
description = "Small educational ML ranking service for Ryden place recommendations."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ryden" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pandas>=2.2",
  "numpy>=2.2",
  "scikit-learn>=1.6",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "pyarrow>=18.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
